Code cleanup #85
Task-Url: https://github.com/gnl42/JiraConnector/issues/85